--- a/demos/video-conferencing.html
+++ b/demos/video-conferencing.html
@@ -146,8 +146,8 @@ var connection = new RTCMultiConnection();
 // connection.autoCloseEntireSession = true;
 
 // by default, socket.io server is assumed to be deployed on your own URL
-// connection.socketURL = '/';
-connection.socketURL = 'https://teachfinityvc.herokuapp.com/';
+connection.socketURL = '/';
+// connection.socketURL = 'https://teachfinityvc.herokuapp.com/';
 
 // comment-out below line if you do not have your own socket.io server
 // connection.socketURL = 'https://rtcmulticonnection.herokuapp.com:443/';
