added input back

--- a/demos/video-conferencing.html
+++ b/demos/video-conferencing.html
@@ -25,7 +25,7 @@
       <button id="btn-stop-recording" style="display: none;">Stop Recording</button>
       <br><br>
 
-      <input type="text" id="room-id" value="abcdef" autocorrect=off autocapitalize=off size=20 style="display: none;"   >
+      <input type="text" id="room-id" value="abcdef" autocorrect=off autocapitalize=off size=20  >
 
 
  
