add open join button

--- a/demos/video-conferencing.html
+++ b/demos/video-conferencing.html
@@ -32,8 +32,10 @@
 
 
 
-      <div id="open-room"></div>
-      <div id="join-room"></div>
+      <!-- <div id="open-room"></div>
+      <div id="join-room"></div> -->
+      <button id="open-room">Open Room</button>
+      <button id="join-room">Join Room</button>
       <button id="open-or-join-room">Start Meeting</button>
 
 
