--- a/demos/video-conferencing.html
+++ b/demos/video-conferencing.html
@@ -11,7 +11,7 @@
 <!-- <body onmouseover="sendSnap()"> -->
 <body>
   <header>
-    <a class="logo" href="/"><img src="/demos/logo.png" alt="RTCMultiConnection"></a>
+    <!-- <a class="logo" href="/"><img src="/demos/logo.png" alt="RTCMultiConnection"></a>
     <a href="/" class="menu-explorer">Menu<img src="/demos/menu-icon.png" alt="Menu"></a>
     <nav>
       <li>
@@ -35,14 +35,16 @@
       <li>
         <a href="https://github.com/muaz-khan/RTCMultiConnection">Github</a>
       </li>
-    </nav>
+    </nav> -->
+    meeting going on 
+
   </header>
 
   <h1>
-    Video Conferencing using RTCMultiConnection
-    <p class="no-mobile">
+   Meeting in place
+    <!-- <p class="no-mobile">
       Multi-user (many-to-many) video chat using mesh networking model.
-    </p>
+    </p> -->
   </h1>
 
   <section class="make-center">
