--- a/demos/video-conferencing.html
+++ b/demos/video-conferencing.html
@@ -107,6 +107,11 @@
     <button id="getAllParticipants" style="display:none">get info of participants</button>
     <button id="share-screen"> share</button>
     <button id="download">download attendance</button>
+    <!-- <button id="whiteboard" > whiteboard</button> -->
+    <!-- <button class="btn btn-success" id="whiteboard" onclick="location.href="https://teachfinityvc.herokuapp.com/dashboard/canvas-designer.html"> Google</button> -->
+    <!-- <button class="btn btn-success" onclick="location.href='https://teachfinityvc.herokuapp.com/dashboard/canvas-designer.html';"> whiteboard</button>
+     <button class="btn btn-success" onclick=" window.open('http://google.com','_blank')"> Google</button> -->
+     <button  onclick=" window.open('https://teachfinityvc.herokuapp.com/dashboard/canvas-designer.html','_blank')"> Whiteboard</button>
 
   </div>
 
